[package]
name = "server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wetalk = { path = "../wetalk" }

log = "0.4"
# pretty_env_logger = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }