[package]
name = "wetalk"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"

anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"

axum = { version = "0.5", features = ["ws", "headers"] }